<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:text="@string/txt_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ptFirstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_first_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/ptLastname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_lastname"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/ptCourseName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_course_option"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/phPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_phone"
                android:importantForAutofill="no"
                android:inputType="phone" />


            <TextView
                android:id="@+id/txtSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_course"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/buttonsColorPrimary"
                    android:text="@string/bt_clear"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/buttonsColorPrimary"
                    android:text="@string/bt_save"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#A7D3E6"
                android:text="@string/bt_submit"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>